--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<div class="dark:bg-slate-900 dark:text-white pb-8 text-sm">
+  <div class="w-full flex justify-center py-8">
+    <button
+            id="theme-toggle"
+            class="p-2 rounded-full text-white bg-slate-900 dark:text-slate-900 dark:bg-white"
+    >
+      Toggle theme
+    </button>
+  </div>
+
+  <div class="mx-auto bg-seasalt dark:bg-raisin-black dark:text-white border border-lavender dark:border-onyx w-half rounded-lg p-6">
+    <div class="flex items-center justify-between pb-4">
+      <div class="flex items-center gap-3 font-bold">
+        <div class="w-10 h-10 bg-lavender dark:bg-onyx rounded-lg flex items-center justify-center"><span class="material-symbols-outlined">calendar_month</span></div>
+        <h2 class="text-title2">My schedule</h2>
+      </div>
+      <span class="material-symbols-outlined text-amaranth-purple dark:text-thulian-pink text-title1">arrow_right_alt</span>
+    </div>
+
+    <div class="w-full bg-white dark:bg-raisin-black border border-lavender dark:border-onyx rounded-sm p-4">
+      <div class="flex justify-between items-center pb-2">
+        <div>
+          <p>Tues, Jan 17 2023</p>
+          <p class="font-semibold">Shift name</p>
+        </div>
+        <div class="bg-pale-purple dark:bg-amaranth-purple rounded-lg inline p-2 font-semibold">In 45 mins</div>
+      </div>
+
+      <div class="bg-seasalt dark:bg-eerie-black border border-lavender dark:border-onyx p-4 rounded-sm">
+        <div class="flex justify-between items-center">
+          <p class="font-semibold">07:00A - 03:00P</p>
+          <span class="material-symbols-outlined text-amaranth-purple dark:text-thulian-pink text-title1">expand_less</span>
+        </div>
+        <div class="flex justify-between w-1/2">
+          <p>07:00A - 03:00P</p>
+          <p>Drive Thru</p>
+        </div>
+        <div class="flex justify-between w-1/2">
+          <p>07:00A - 03:00P</p>
+          <p>Drive Thru</p>
+        </div>
+        <div class="flex justify-between w-1/2">
+          <p>07:00A - 03:00P</p>
+          <p>Drive Thru</p>
+        </div>
+        <div class="flex justify-between w-1/2">
+          <p>07:00A - 03:00P</p>
+          <p>Drive Thru</p>
+        </div>
+        <div class="flex justify-between w-1/2">
+          <p>07:00A - 03:00P</p>
+          <p>Drive Thru</p>
+        </div>
+
+      </div>
+
+    </div>
+
+
+
+  </div>
+
+</div>
+
+<script>
+  const btn = document.getElementById("theme-toggle");
+  btn.addEventListener("click", function () {
+    document.body.classList.toggle("dark");
+  });
+</script>
+
 </body>
 </html>
